--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="a.android.reservamob">
 
     <application
@@ -8,8 +9,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".AptoActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity
+            android:name=".BuscarReservaActivity"
+            android:theme="@style/GeneralNoTittle">
+        </activity>
+        <activity
+            android:name=".AptoActivity"
+            android:theme="@style/GeneralNoTittle">
+
+        </activity>
         <activity
             android:name=".MainActivity"
             android:theme="@style/GeneralNoTittle">
